# bakery

./: #test.sh#  .gitignore  .gitmodules  .hgignore  CNAME  LICENSE  README.md  README.org  README2.md  deprecated.org  deprecated.org.bak  flake.nix  index.html  makefile  nix.org  pyproject.toml  setup.py  shell.nix  shell.org  test.hy  test.py  test.txt  test4.hy  tests.hy  tests.org
baker/: __init__.py  _alt_property_vars.py  _attach_command_args_kwargs.py  _bakeri_menu.py  _create_command.py  _funky_properties.py  _long_property_vars.py  _milcery.py  _process_args_kwargs.py  _return_output.py  _run_frosting.py  _set.py  _short_property_vars.py  baking_.py  extensions.py  i.py  tier_.py  wait_kill_.py  y.py
bakery/: __init__ .bak.org  __init__.hy  __init__.org  __init__.py  _create_command.py  _funky_properties.py  _milcery.py  _process_args_kwargs.py  _return_output.py  _run_frosting.py  _set.py  _short_property_vars.py  bakery.hy  bakery.org  baking_.py  deprecated.org.bak  frosting.py  milcery.py  miscellaneous.py  order_cancelled.py  subcommand.py
tests/: conftest.py  test-bakery.hy  test-baking-freezers.hy  test-baking.hy  test-context-manager.hy  test-error.hy  test-exports.hy  test-filtered-output.hy  test-freezing.hy  test-git-remote.hy  test-list-output.hy  test-loop.hy  test-module-call.hy  test-piping.hy  test-progress.hy  test-sorted-output.hy  test-split.hy  test-string-output.hy  test-trim.hy  test_bakery.py  test_baking.py  test_baking_freezers.py  test_capture.py  test_context_manager.py  test_error.py  test_exports.py  test_filtered_output.py  test_freezing.py  test_git_remote.py  test_list_output.py  test_loop.py  test_module_call.py  test_piping.py  test_sorted_output.py  test_split.py  test_string_output.py  test_trim.py
