[tool.poetry]
name = "bakery"
version = "2.0.0.0"
description = "An \"sh\" alternative"
authors = ["sylvorg <jeet.ray@syvl.org>"]
license = "OREO"
include = [
	"bakery/**/*.py",
	"bakery/**/*.hy",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
oreo = { git = "https://github.com/sylvorg/oreo.git", branch = "main" }

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"