[tool.poetry]
name = "bakery"
version = "2.0.0.0"
description = "An \"sh\" alternative!"
authors = ["sylvorg <jeet.ray@syvl.org>"]
license = "OREO"
include = [
	"bakery/**/*.py",
	"bakery/**/*.hy",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
oreo = { git = "https://github.com/syvlorg/oreo.git", branch = "main" }
py = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
poetry = "*"
poetry2setup = "*"
pytest-hy = "*"
pytest-randomly = "*"
pytest-parametrized = "*"
pytest-sugar = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
	"--strict-markers",
]
markers = [
	"bakery",
	"baking",
	"context_manager",
	"error",
	"exports",
	"filtered_output",
	"git_remote",
	"list_output",
	"loop",
	"module_call",
	"piping",
	"progress",
	"sorted_output",
	"split",
	"string_output",
	"trim",
    "freezing",
]
